2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/generic/bits/memory.h: New file.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* signal/signal-dispatch.c: Include <viengoos/math.h>.
	(signal_dispatch): Use vg_lsb64, not l4_lsb64.
	* sysdeps/viengoos/pt-sigstate.c (__pthread_sigstate): Likewise.
	* signal/sigwaitinfo.c (sigwaitinfo): Use vg_msb64, not l4_msb64.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/viengoos/bits/pthread-np.h (pthread_hurd_utcb_np):
	Return a struct hurd_utcb *, not a struct vg_utcb *.
	* sysdeps/viengoos/pt-sysdep.h (PTHREAD_SYSDEP_MEMBERS): Change
	utcb's type to a struct hurd_utcb *.

2008-12-11  Neal H. Walfield  <neal@gnu.org>

	Update to new RPC interfaces, IPC semantics.

	* sysdeps/viengoos/bits/pthread-np.h: Include <hurd/exceptions.h>.
	(pthread_hurd_utcb_np): New declaration.
	* sysdeps/viengoos/pt-hurd-utcb-np.c: New file.
	* Makefile.am (libpthread_a_SOURCES): Add pt-hurd-utcb.c.

	* sysdeps/viengoos/pt-sysdep.h (EXCEPTION_AREA_SIZE): Don't
	define.
	(EXCEPTION_AREA_SIZE_LOG2): Likewise.
	(EXCEPTION_PAGE): Likewise.
	(PTHREAD_SYSDEP_MEMBERS): Remove fields exception_area, and
	exception_area_va.  Add fields utcb and lock_message_buffer.
	* sysdeps/viengoos/pt-thread-alloc.c: Include
	<hurd/message-buffer.h>.
	(__pthread_thread_alloc): Initialize thread->lock_message_buffer.
	When executed the first time, set the thread's L4 user-defined
	handler.  Initialize THREAD->UTCB with the thread's current utcb.
	Set HURD_UTCB to PTHREAD_HURD_UTCB_NP.  For subsequent threads,
	don't manually set up the activation area.  Instead, call
	hurd_activation_state_alloc.
	* sysdeps/viengoos/pt-thread-dealloc.c: Include
	<hurd/message-buffer.h>.
	(__pthread_thread_dealloc): Call __pthread_thread_halt.  Don't
	manually clean up the activation area.  Instead, call
	hurd_activation_state_free.  Free THREAD->LOCK_MESSAGE_BUFFER.
	* sysdeps/viengoos/ia32/pt-setup.c (stack_setup): Pre-fault the
	first four pages of the new stack.